bison-parser/examples/ill_typed/bad8.sa
module X
       x : [0 .. 3] init true;
       c : clock;
       [a!] true @ c -> (x' = x);
endmodule